--- a/fallbacks/dark/index.en.html
+++ b/fallbacks/dark/index.en.html
@@ -188,7 +188,7 @@
             <noscript>
                 <div id="noscript-warning">
                     <h3>🚨 Oops! A cybersecurity enthusiast has arrived! <em>#NoJS = 😿</em></h3>
-                    <p><strong>This website is 100% Vanilla JavaScript</strong>, but I've adapted all the content so you can view it</p>
+                    <p><strong>This website is 100% <span lang="en-GB">Vanilla JavaScript</span></strong>, but I've adapted all the content so you can view it</p>
                 </div>
             </noscript>
             <!--//NOSCRIPT END -->
@@ -259,7 +259,7 @@
                         </picture>
                         <figcaption>
                             <h1>Gonzalo Cabezas Núñez</h1>
-                            <h2 data-i18n="profile.title">Frontend developer transitioning to Fullstack</h2>
+                            <h2 data-i18n="profile.title"><span lang="en-GB">Frontend</span> developer transitioning to <span lang="en-GB">Fullstack</span></h2>
                             <p data-i18n="profile.bio">I’m obsessed with clean, functional code. I train every day—both through formal courses and self-learning—because learning doesn’t stop when the bell rings. I like breaking things to understand (and fix) them better, which is why Red Teaming strongly appeals to me. I don’t follow the standard path; I prefer carving my own with a keyboard and coffee. I look for projects where I can learn, contribute, and leave a mark—without pretension or empty promises. If I don’t know something, I dig into it. And if something motivates me, I won’t stop until I get it right.</p>
                         </figcaption>
                     </figure>
@@ -312,7 +312,7 @@
                             </svg>
                         </li>
                         <li>
-                            <address>08014 Barcelona</address>
+                            <address>08014 <span lang="ca-ES">Barcelona</span></address>
                             <svg class="icons-color-1" aria-hidden="true" width="22" height="22" preserveAspectRatio="xMinYMin meet">
                                 <use href="../../img/sprite.svg#address"></use>
                             </svg>
@@ -330,10 +330,10 @@
                         <h6 lang="ca-ES">Institució Pau Casals</h6>
                         <ol>
                             <li data-i18n="studies.daw.ja">
-                                <abbr title="JavaScript Object Notation">JSON</abbr> and <abbr title="Asynchronous JavaScript and XML">AJAX</abbr>
+                                <abbr lang="en-GB" title="JavaScript Object Notation">JSON</abbr> and <abbr lang="en-GB" title="Asynchronous JavaScript and XML">AJAX</abbr>
                             </li>
                             <li data-i18n="studies.daw.jp">
-                                Java and <abbr title="Hypertext Preprocessor">PHP</abbr> <span>(soon)</span>
+                                <span lang="en-GB">Java</span> and <abbr lang="en-GB" title="Hypertext Preprocessor">PHP</abbr> <span>(soon)</span>
                             </li>
                         </ol>
                     </article>
@@ -342,10 +342,10 @@
                         <h6 lang="es-ES">ADAMS Formación</h6>
                         <ol>
                             <li data-i18n="studies.ifcd.hc">
-                                <abbr title="Hypertext Markup Language">HTML5</abbr> and <abbr title="Cascading Style Sheets">CSS3</abbr>
+                                <abbr lang="en-GB" title="Hypertext Markup Language">HTML5</abbr> and <abbr lang="en-GB" title="Cascading Style Sheets">CSS3</abbr>
                             </li>
                             <li>
-                                <a data-i18n-attr="aria-label" data-i18n="studies.ifcd.jw" class="modal-link" href="../../doc/IFCD0110-JSyPW_gonzalo.pdf" target="_blank" data-modal="../../doc/IFCD0110-JSyPW_gonzalo.pdf" aria-label="See certificate"><abbr title="JavaScript">JS</abbr> Vanilla and web publication</a>
+                                <a data-i18n-attr="aria-label" data-i18n="studies.ifcd.jw" class="modal-link" href="../../doc/IFCD0110-JSyPW_gonzalo.pdf" target="_blank" data-modal="../../doc/IFCD0110-JSyPW_gonzalo.pdf" aria-label="See certificate"><span lang="en-GB">Vanilla <abbr lang="en-GB" title="JavaScript">JS</abbr></span> and web publication</a>
                             </li>
                             <li>
                                 <a data-i18n-attr="aria-label" data-i18n="studies.ifcd.add" class="modal-link" href="../../doc/IFCD0110-FC_gonzalo.pdf" target="_blank" data-modal="../../doc/IFCD0110-FC_gonzalo.pdf" aria-label="See certificate">Additional training</a>
@@ -409,7 +409,7 @@
                         <h6 lang="ca-ES">IES Joan Coromines</h6>
                         <ol>
                             <li>
-                                <a data-i18n-attr="aria-label" data-i18n="studies.eso.title" class="modal-link" href="../../doc/certificatESO_gonzalo.pdf" target="_blank" data-modal="../../doc/certificatESO_gonzalo.pdf" aria-label="See certificate"><abbr title="Educación Secundaria Obligatoria">ESO</abbr> Certificate</a>
+                                <a data-i18n-attr="aria-label" data-i18n="studies.eso.title" class="modal-link" href="../../doc/certificatESO_gonzalo.pdf" target="_blank" data-modal="../../doc/certificatESO_gonzalo.pdf" aria-label="See certificate"><abbr lang="es-ES" title="Educación Secundaria Obligatoria">ESO</abbr> Certificate</a>
                             </li>
                         </ol>
                     </article>
@@ -445,7 +445,7 @@
                     <div id="other-data">
                         <ol>
                             <li data-i18n="other.driving">Driving license B and own vehicle</li>
-                            <li data-i18n="other.availability">Full availability within the province of Barcelona</li>
+                            <li data-i18n="other.availability">Full availability within the province of <span lang="ca-ES">Barcelona</span></li>
                         </ol>
                         <p id="random-phrases" aria-live="polite"></p>
                     </div>
@@ -525,7 +525,7 @@
         <footer id="cookies-bar" style="display: block;">
             <p data-i18n="cookies.bar">
                 🍪🐱 <strong>sandokan.cat</strong> respect your privacy. <em>We do not track</em>, only measure anonymous visits — (if you agree).
-                <button id="accept-cookies" class="icons-scale" aria-label="Continue browsing" type="button">Continue</button> | <a id="info-cookies" href="https://en.wikipedia.org/wiki/HTTP_cookie" target="_blank" rel="noopener noreferrer" aria-label="More information about cookies">What is a cookie?</a>
+                <button id="accept-cookies" class="icons-scale" aria-label="Continue browsing" type="button">Continue</button> | <a id="info-cookies" href="https://en.wikipedia.org/wiki/HTTP_cookie" target="_blank" rel="noopener noreferrer" aria-label="More information about cookies">What is a <span lang="en-GB">cookie</span>?</a>
             </p>
         </footer>
         <!--//COOKIES END -->
