--- a/fallbacks/light/index.ca.html
+++ b/fallbacks/light/index.ca.html
@@ -188,7 +188,7 @@
             <noscript>
                 <div id="noscript-warning">
                     <h3>🚨 ¡Ups! Ha arribat un enamorat de la ciberseguretat! <em>#NoJS = 😿</em></h3>
-                    <p><strong>Aquest web es 100% JavaScript Vanilla</strong>, però he adaptat tot el contingut perquè puguis veure'l</p>
+                    <p><strong>Aquest web es 100% <span lang="en-GB">Vanilla JavaScript</span></strong>, però he adaptat tot el contingut perquè puguis veure'l</p>
                 </div>
             </noscript>
             <!--//NOSCRIPT END -->
@@ -259,7 +259,7 @@
                         </picture>
                         <figcaption>
                             <h1>Gonzalo Cabezas Núñez</h1>
-                            <h2 data-i18n="profile.title">Desenvolupador Frontend en transició a Fullstack</h2>
+                            <h2 data-i18n="profile.title">Desenvolupador <span lang="en-GB">Frontend</span> en transició a <span lang="en-GB">Fullstack</span></h2>
                             <p data-i18n="profile.bio">M'obsesiona el codi net i funcional. Em formo a diari, tant en academies com per lliure, perquè el coneixement no s'acaba quan sona el timbre. M'agrada trencar coses per entendre-les (i arreglar-les millor), per això el Red Team em crida fort. No segueixo el camí estàndard; prefereixo traçar el meu amb teclat i cafè. Busco projectes on pugui aprendre, aportar i deixar empremta, sense postureigs ni promeses buides. Si no sé alguna cosa, la investigo. I si alguna cosa em motiva, no paro fins a fer-ho bé.</p>
                         </figcaption>
                     </figure>
@@ -312,7 +312,7 @@
                             </svg>
                         </li>
                         <li>
-                            <address>08014 Barcelona</address>
+                            <address>08014 <span lang="ca-ES">Barcelona</span></address>
                             <svg class="icons-color-1" aria-hidden="true" width="22" height="22" preserveAspectRatio="xMinYMin meet">
                                 <use href="../../img/sprite.svg#address"></use>
                             </svg>
@@ -330,10 +330,10 @@
                         <h6 lang="ca-ES">Institució Pau Casals</h6>
                         <ol>
                             <li data-i18n="studies.daw.ja">
-                                <abbr title="JavaScript Object Notation">JSON</abbr> i <abbr title="Asynchronous JavaScript and XML">AJAX</abbr>
+                                <abbr lang="en-GB" title="JavaScript Object Notation">JSON</abbr> i <abbr lang="en-GB" title="Asynchronous JavaScript and XML">AJAX</abbr>
                             </li>
                             <li data-i18n="studies.daw.jp">
-                                Java i <abbr title="Hypertext Preprocessor">PHP</abbr> <span>(próximament)</span>
+                                <span lang="en-GB">Java</span> i <abbr lang="en-GB" title="Hypertext Preprocessor">PHP</abbr> <span>(próximament)</span>
                             </li>
                         </ol>
                     </article>
@@ -342,10 +342,10 @@
                         <h6 lang="es-ES">ADAMS Formación</h6>
                         <ol>
                             <li data-i18n="studies.ifcd.hc">
-                                <abbr title="Hypertext Markup Language">HTML5</abbr> i <abbr title="Cascading Style Sheets">CSS3</abbr>
+                                <abbr lang="en-GB" title="Hypertext Markup Language">HTML5</abbr> i <abbr lang="en-GB" title="Cascading Style Sheets">CSS3</abbr>
                             </li>
                             <li>
-                                <a data-i18n-attr="aria-label" data-i18n="studies.ifcd.jw" class="modal-link" href="../../doc/IFCD0110-JSyPW_gonzalo.pdf" target="_blank" data-modal="../../doc/IFCD0110-JSyPW_gonzalo.pdf" aria-label="Veure certificat"><abbr title="JavaScript">JS</abbr> Vanilla i publicació web</a>
+                                <a data-i18n-attr="aria-label" data-i18n="studies.ifcd.jw" class="modal-link" href="../../doc/IFCD0110-JSyPW_gonzalo.pdf" target="_blank" data-modal="../../doc/IFCD0110-JSyPW_gonzalo.pdf" aria-label="Veure certificat"><span lang="en-GB">Vanilla <abbr lang="en-GB" title="JavaScript">JS</abbr></span> i publicació web</a>
                             </li>
                             <li>
                                 <a data-i18n-attr="aria-label" data-i18n="studies.ifcd.add" class="modal-link" href="../../doc/IFCD0110-FC_gonzalo.pdf" target="_blank" data-modal="../../doc/IFCD0110-FC_gonzalo.pdf" aria-label="Veure certificat">Formació complementària</a>
@@ -409,7 +409,7 @@
                         <h6 lang="ca-ES">IES Joan Coromines</h6>
                         <ol>
                             <li>
-                                <a data-i18n-attr="aria-label" data-i18n="studies.eso.title" class="modal-link" href="../../doc/certificatESO_gonzalo.pdf" target="_blank" data-modal="../../doc/certificatESO_gonzalo.pdf" aria-label="Veure certificat">Certificat d'<abbr title="Educación Secundaria Obligatoria">ESO</abbr></a>
+                                <a data-i18n-attr="aria-label" data-i18n="studies.eso.title" class="modal-link" href="../../doc/certificatESO_gonzalo.pdf" target="_blank" data-modal="../../doc/certificatESO_gonzalo.pdf" aria-label="Veure certificat">Certificat d'<abbr lang="es-ES" title="Educación Secundaria Obligatoria">ESO</abbr></a>
                             </li>
                         </ol>
                     </article>
@@ -445,7 +445,7 @@
                     <div id="other-data">
                         <ol>
                             <li data-i18n="other.driving">Permís de conduir B i vehicle propi</li>
-                            <li data-i18n="other.availability">Disponibilitat total dins de la província de Barcelona</li>
+                            <li data-i18n="other.availability">Disponibilitat total dins de la província de <span lang="ca-ES">Barcelona</span></li>
                         </ol>
                         <p id="random-phrases" aria-live="polite"></p>
                     </div>
@@ -525,7 +525,7 @@
         <footer id="cookies-bar" style="display: block;">
             <p data-i18n="cookies.bar">
                 🍪🐱 <strong>sandokan.cat</strong> respecta la teva privacitat. <em>No rastregem</em>, només mesurem visites anònimes — (si acceptes).
-                <button id="accept-cookies" class="icons-scale" aria-label="Seguir navegant">Continuar</button> | <a id="info-cookies" href="https://ca.wikipedia.org/wiki/Galeta_(inform%C3%A0tica)" target="_blank" rel="noopener noreferrer" aria-label="Més informació sobre cookies">Què és una cookie?</a>
+                <button id="accept-cookies" class="icons-scale" aria-label="Seguir navegant">Continuar</button> | <a id="info-cookies" href="https://ca.wikipedia.org/wiki/Galeta_(inform%C3%A0tica)" target="_blank" rel="noopener noreferrer" aria-label="Més informació sobre cookies">Què és una <span lang="en-GB">cookie</span>?</a>
             </p>
         </footer>
         <!--//COOKIES END -->
