--- a/fallbacks/light/index.es.html
+++ b/fallbacks/light/index.es.html
@@ -188,7 +188,7 @@
             <noscript>
                 <div id="noscript-warning">
                     <h3>🚨 ¡Ups! ¡Ha llegado un enamorado de la ciberseguridad! <em>#NoJS = 😿</em></h3>
-                    <p><strong>Esta web es 100% JavaScript Vanilla</strong>, pero he adaptado todo el contenido para que puedas verlo</p>
+                    <p><strong>Esta web es 100% <span lang="en-GB">Vanilla JavaScript</span></strong>, pero he adaptado todo el contenido para que puedas verlo</p>
                 </div>
             </noscript>
             <!--//NOSCRIPT END -->
@@ -259,7 +259,7 @@
                         </picture>
                         <figcaption>
                             <h1>Gonzalo Cabezas Núñez</h1>
-                            <h2 data-i18n="profile.title">Desarrollador Frontend en transición a Fullstack</h2>
+                            <h2 data-i18n="profile.title">Desarrollador <span lang="en-GB">Frontend</span> en transición a <span lang="en-GB">Fullstack</span></h2>
                             <p data-i18n="profile.bio">Me obsesiona el código limpio y funcional. Me formo a diario, tanto en academias como por libre, porque el conocimiento no se acaba cuando suena el timbre. Me gusta romper cosas para entenderlas (y arreglarlas mejor), por eso el Red Team me llama fuerte. No sigo el camino estándar; prefiero trazar el mío con teclado y café. Busco proyectos donde pueda aprender, aportar y dejar huella, sin postureos ni promesas vacías. Si algo no lo sé, lo investigo. Y si algo me motiva, no paro hasta hacerlo bien.</p>
                         </figcaption>
                     </figure>
@@ -312,7 +312,7 @@
                             </svg>
                         </li>
                         <li>
-                            <address>08014 Barcelona</address>
+                            <address>08014 <span lang="ca-ES">Barcelona</span></address>
                             <svg class="icons-color-1" aria-hidden="true" width="22" height="22" preserveAspectRatio="xMinYMin meet">
                                 <use href="../../img/sprite.svg#address"></use>
                             </svg>
@@ -330,10 +330,10 @@
                         <h6 lang="ca-ES">Institució Pau Casals</h6>
                         <ol>
                             <li data-i18n="studies.daw.ja">
-                                <abbr title="JavaScript Object Notation">JSON</abbr> y <abbr title="Asynchronous JavaScript and XML">AJAX</abbr>
+                                <abbr lang="en-GB" title="JavaScript Object Notation">JSON</abbr> y <abbr lang="en-GB" title="Asynchronous JavaScript and XML">AJAX</abbr>
                             </li>
                             <li data-i18n="studies.daw.jp">
-                                Java y <abbr title="Hypertext Preprocessor">PHP</abbr> <span>(próximamente)</span>
+                                <span lang="en-GB">Java</span> y <abbr lang="en-GB" title="Hypertext Preprocessor">PHP</abbr> <span>(próximamente)</span>
                             </li>
                         </ol>
                     </article>
@@ -342,10 +342,10 @@
                         <h6 lang="es-ES">ADAMS Formación</h6>
                         <ol>
                             <li data-i18n="studies.ifcd.hc">
-                                <abbr title="Hypertext Markup Language">HTML5</abbr> y <abbr title="Cascading Style Sheets">CSS3</abbr>
+                                <abbr lang="en-GB" title="Hypertext Markup Language">HTML5</abbr> y <abbr lang="en-GB" title="Cascading Style Sheets">CSS3</abbr>
                             </li>
                             <li>
-                                <a data-i18n-attr="aria-label" data-i18n="studies.ifcd.jw" class="modal-link" href="../../doc/IFCD0110-JSyPW_gonzalo.pdf" target="_blank" data-modal="../../doc/IFCD0110-JSyPW_gonzalo.pdf" aria-label="Ver certificado"><abbr title="JavaScript">JS</abbr> Vanilla y publicación web</a>
+                                <a data-i18n-attr="aria-label" data-i18n="studies.ifcd.jw" class="modal-link" href="../../doc/IFCD0110-JSyPW_gonzalo.pdf" target="_blank" data-modal="../../doc/IFCD0110-JSyPW_gonzalo.pdf" aria-label="Ver certificado"><span lang="en-GB">Vanilla <abbr lang="en-GB" title="JavaScript">JS</abbr></span> y publicación web</a>
                             </li>
                             <li>
                                 <a data-i18n-attr="aria-label" data-i18n="studies.ifcd.add" class="modal-link" href="../../doc/IFCD0110-FC_gonzalo.pdf" target="_blank" data-modal="../../doc/IFCD0110-FC_gonzalo.pdf" aria-label="Ver certificado">Formación complementaria</a>
@@ -409,7 +409,7 @@
                         <h6 lang="ca-ES">IES Joan Coromines</h6>
                         <ol>
                             <li>
-                                <a data-i18n-attr="aria-label" data-i18n="studies.eso.title" class="modal-link" href="../../doc/certificatESO_gonzalo.pdf" target="_blank" data-modal="../../doc/certificatESO_gonzalo.pdf" aria-label="See certificate">Certificado en <abbr title="Educación Secundaria Obligatoria">ESO</abbr></a>
+                                <a data-i18n-attr="aria-label" data-i18n="studies.eso.title" class="modal-link" href="../../doc/certificatESO_gonzalo.pdf" target="_blank" data-modal="../../doc/certificatESO_gonzalo.pdf" aria-label="See certificate">Certificado en <abbr lang="es-ES" title="Educación Secundaria Obligatoria">ESO</abbr></a>
                             </li>
                         </ol>
                     </article>
@@ -445,7 +445,7 @@
                     <div id="other-data">
                         <ol>
                             <li data-i18n="other.driving">Permiso de conducir B y vehículo propio</li>
-                            <li data-i18n="other.availability">Disponibilidad total dentro de la provincia de Barcelona</li>
+                            <li data-i18n="other.availability">Disponibilidad total dentro de la provincia de <span lang="ca-ES">Barcelona</span></li>
                         </ol>
                         <p id="random-phrases" aria-live="polite"></p>
                     </div>
@@ -525,7 +525,7 @@
         <footer id="cookies-bar" style="display: block;">
             <p data-i18n="cookies.bar">
                 🍪🐱 <strong>sandokan.cat</strong> respeta tu privacidad. <em>No rastreamos</em>, solo medimos visitas anónimas — (si aceptas).
-                <button id="accept-cookies" class="icons-scale" aria-label="Seguir navegando">Continuar</button> | <a id="info-cookies" href="https://es.wikipedia.org/wiki/Cookie_(inform%C3%A1tica)" target="_blank" rel="noopener noreferrer" aria-label="Más información sobre cookies">¿Qué es una cookie?</a>
+                <button id="accept-cookies" class="icons-scale" aria-label="Seguir navegando">Continuar</button> | <a id="info-cookies" href="https://es.wikipedia.org/wiki/Cookie_(inform%C3%A1tica)" target="_blank" rel="noopener noreferrer" aria-label="Más información sobre cookies">¿Qué es una <span lang="en-GB">cookie</span>?</a>
             </p>
         </footer>
         <!--//COOKIES END -->
