--- a/fallbacks/dark/index.ca.html
+++ b/fallbacks/dark/index.ca.html
@@ -187,7 +187,7 @@
             <!-- NOSCRIPT WARNING -->
             <noscript>
                 <div id="noscript-warning">
-                    <h3>🚨 ¡Ups! Ha arribat un enamorat de la ciberseguretat! <em>#NoJS = 😿</em></h3>
+                    <h3>🚨 ¡Ups! Ha arribat un enamorat de la ciberseguretat! <em lang="en-GB">#NoJS = 😿</em></h3>
                     <p><strong>Aquest web es 100% <span lang="en-GB">Vanilla JavaScript</span></strong>, però he adaptat tot el contingut perquè puguis veure'l</p>
                 </div>
             </noscript>
@@ -258,9 +258,9 @@
                             <img data-i18n-attr="alt" data-i18n="gonzalo.photo" src="../../img/photos/gonzalo@3x.png" alt="Retrat d'en Gonzalo Cabezas" decoding="async" loading="lazy"> <!-- FALLBACK IMG (LAST RESORT) -->
                         </picture>
                         <figcaption>
-                            <h1>Gonzalo Cabezas Núñez</h1>
+                            <h1 lang="es-ES">Gonzalo Cabezas Núñez</h1>
                             <h2 data-i18n="profile.title">Desenvolupador <span lang="en-GB">Frontend</span> en transició a <span lang="en-GB">Fullstack</span></h2>
-                            <p data-i18n="profile.bio">M'obsesiona el codi net i funcional. Em formo a diari, tant en academies com per lliure, perquè el coneixement no s'acaba quan sona el timbre. M'agrada trencar coses per entendre-les (i arreglar-les millor), per això el Red Team em crida fort. No segueixo el camí estàndard; prefereixo traçar el meu amb teclat i cafè. Busco projectes on pugui aprendre, aportar i deixar empremta, sense postureigs ni promeses buides. Si no sé alguna cosa, la investigo. I si alguna cosa em motiva, no paro fins a fer-ho bé.</p>
+                            <p data-i18n="profile.bio">M'obsesiona el codi net i funcional. Em formo a diari, tant en academies com per lliure, perquè el coneixement no s'acaba quan sona el timbre. M'agrada trencar coses per entendre-les (i arreglar-les millor), per això el <span lang="en-GB">Red Team</span> em crida fort. No segueixo el camí estàndard; prefereixo traçar el meu amb teclat i cafè. Busco projectes on pugui aprendre, aportar i deixar empremta, sense postureigs ni promeses buides. Si no sé alguna cosa, la investigo. I si alguna cosa em motiva, no paro fins a fer-ho bé.</p>
                         </figcaption>
                     </figure>
                 </section>
@@ -345,7 +345,7 @@
                                 <abbr lang="en-GB" title="Hypertext Markup Language">HTML5</abbr> i <abbr lang="en-GB" title="Cascading Style Sheets">CSS3</abbr>
                             </li>
                             <li>
-                                <a data-i18n-attr="aria-label" data-i18n="studies.ifcd.jw" class="modal-link" href="../../doc/IFCD0110-JSyPW_gonzalo.pdf" target="_blank" data-modal="../../doc/IFCD0110-JSyPW_gonzalo.pdf" aria-label="Veure certificat"><span lang="en-GB">Vanilla <abbr lang="en-GB" title="JavaScript">JS</abbr></span> i publicació web</a>
+                                <a data-i18n-attr="aria-label" data-i18n="studies.ifcd.jw" class="modal-link" href="../../doc/IFCD0110-JSyPW_gonzalo.pdf" target="_blank" data-modal="../../doc/IFCD0110-JSyPW_gonzalo.pdf" aria-label="Veure certificat"><span lang="en-GB">Vanilla <abbr title="JavaScript">JS</abbr></span> i publicació web</a>
                             </li>
                             <li>
                                 <a data-i18n-attr="aria-label" data-i18n="studies.ifcd.add" class="modal-link" href="../../doc/IFCD0110-FC_gonzalo.pdf" target="_blank" data-modal="../../doc/IFCD0110-FC_gonzalo.pdf" aria-label="Veure certificat">Formació complementària</a>
