--- a/fallbacks/dark/index.es.html
+++ b/fallbacks/dark/index.es.html
@@ -187,7 +187,7 @@
             <!-- NOSCRIPT WARNING -->
             <noscript>
                 <div id="noscript-warning">
-                    <h3>🚨 ¡Ups! ¡Ha llegado un enamorado de la ciberseguridad! <em>#NoJS = 😿</em></h3>
+                    <h3>🚨 ¡Ups! ¡Ha llegado un enamorado de la ciberseguridad! <em lang="en-GB">#NoJS = 😿</em></h3>
                     <p><strong>Esta web es 100% <span lang="en-GB">Vanilla JavaScript</span></strong>, pero he adaptado todo el contenido para que puedas verlo</p>
                 </div>
             </noscript>
@@ -258,9 +258,9 @@
                             <img data-i18n-attr="alt" data-i18n="gonzalo.photo" src="../../img/photos/gonzalo@3x.png" alt="Retrato de Gonzalo Cabezas" decoding="async" loading="lazy"> <!-- FALLBACK IMG (LAST RESORT) -->
                         </picture>
                         <figcaption>
-                            <h1>Gonzalo Cabezas Núñez</h1>
+                            <h1 lang="es-ES">Gonzalo Cabezas Núñez</h1>
                             <h2 data-i18n="profile.title">Desarrollador <span lang="en-GB">Frontend</span> en transición a <span lang="en-GB">Fullstack</span></h2>
-                            <p data-i18n="profile.bio">Me obsesiona el código limpio y funcional. Me formo a diario, tanto en academias como por libre, porque el conocimiento no se acaba cuando suena el timbre. Me gusta romper cosas para entenderlas (y arreglarlas mejor), por eso el Red Team me llama fuerte. No sigo el camino estándar; prefiero trazar el mío con teclado y café. Busco proyectos donde pueda aprender, aportar y dejar huella, sin postureos ni promesas vacías. Si algo no lo sé, lo investigo. Y si algo me motiva, no paro hasta hacerlo bien.</p>
+                            <p data-i18n="profile.bio">Me obsesiona el código limpio y funcional. Me formo a diario, tanto en academias como por libre, porque el conocimiento no se acaba cuando suena el timbre. Me gusta romper cosas para entenderlas (y arreglarlas mejor), por eso el <span lang="en-GB">Red Team</span> me llama fuerte. No sigo el camino estándar; prefiero trazar el mío con teclado y café. Busco proyectos donde pueda aprender, aportar y dejar huella, sin postureos ni promesas vacías. Si algo no lo sé, lo investigo. Y si algo me motiva, no paro hasta hacerlo bien.</p>
                         </figcaption>
                     </figure>
                 </section>
@@ -345,7 +345,7 @@
                                 <abbr lang="en-GB" title="Hypertext Markup Language">HTML5</abbr> y <abbr lang="en-GB" title="Cascading Style Sheets">CSS3</abbr>
                             </li>
                             <li>
-                                <a data-i18n-attr="aria-label" data-i18n="studies.ifcd.jw" class="modal-link" href="../../doc/IFCD0110-JSyPW_gonzalo.pdf" target="_blank" data-modal="../../doc/IFCD0110-JSyPW_gonzalo.pdf" aria-label="Ver certificado"><span lang="en-GB">Vanilla <abbr lang="en-GB" title="JavaScript">JS</abbr></span> y publicación web</a>
+                                <a data-i18n-attr="aria-label" data-i18n="studies.ifcd.jw" class="modal-link" href="../../doc/IFCD0110-JSyPW_gonzalo.pdf" target="_blank" data-modal="../../doc/IFCD0110-JSyPW_gonzalo.pdf" aria-label="Ver certificado"><span lang="en-GB">Vanilla <abbr title="JavaScript">JS</abbr></span> y publicación web</a>
                             </li>
                             <li>
                                 <a data-i18n-attr="aria-label" data-i18n="studies.ifcd.add" class="modal-link" href="../../doc/IFCD0110-FC_gonzalo.pdf" target="_blank" data-modal="../../doc/IFCD0110-FC_gonzalo.pdf" aria-label="Ver certificado">Formación complementaria</a>
