--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <!-- NOSCRIPT WARNING -->
             <noscript>
                 <div id="noscript-warning">
-                    <h3>🚨 Oops! A cybersecurity enthusiast has arrived! <em>#NoJS = 😿</em></h3>
+                    <h3>🚨 Oops! A cybersecurity enthusiast has arrived! <em lang="en-GB">#NoJS = 😿</em></h3>
                     <p><strong>This website is 100% <span lang="en-GB">Vanilla JavaScript</span></strong>, but I've adapted all the content so you can view it</p>
                 </div>
             </noscript>
@@ -258,9 +258,9 @@
                             <img data-i18n-attr="alt" data-i18n="gonzalo.photo" src="img/photos/gonzalo@3x.png" alt="Portrait of Gonzalo Cabezas" decoding="async" loading="lazy"> <!-- FALLBACK IMG (LAST RESORT) -->
                         </picture>
                         <figcaption>
-                            <h1>Gonzalo Cabezas Núñez</h1>
+                            <h1 lang="es-ES">Gonzalo Cabezas Núñez</h1>
                             <h2 data-i18n="profile.title"><span lang="en-GB">Frontend</span> developer transitioning to <span lang="en-GB">Fullstack</span></h2>
-                            <p data-i18n="profile.bio">I’m obsessed with clean, functional code. I train every day—both through formal courses and self-learning—because learning doesn’t stop when the bell rings. I like breaking things to understand (and fix) them better, which is why Red Teaming strongly appeals to me. I don’t follow the standard path; I prefer carving my own with a keyboard and coffee. I look for projects where I can learn, contribute, and leave a mark—without pretension or empty promises. If I don’t know something, I dig into it. And if something motivates me, I won’t stop until I get it right.</p>
+                            <p data-i18n="profile.bio">I’m obsessed with clean, functional code. I train every day—both through formal courses and self-learning—because learning doesn’t stop when the bell rings. I like breaking things to understand (and fix) them better, which is why <span lang="en-GB">Red Teaming</span> strongly appeals to me. I don’t follow the standard path; I prefer carving my own with a keyboard and coffee. I look for projects where I can learn, contribute, and leave a mark—without pretension or empty promises. If I don’t know something, I dig into it. And if something motivates me, I won’t stop until I get it right.</p>
                         </figcaption>
                     </figure>
                 </section>
@@ -345,7 +345,7 @@
                                 <abbr lang="en-GB" title="Hypertext Markup Language">HTML5</abbr> and <abbr lang="en-GB" title="Cascading Style Sheets">CSS3</abbr>
                             </li>
                             <li>
-                                <a data-i18n-attr="aria-label" data-i18n="studies.ifcd.jw" class="modal-link" href="doc/IFCD0110-JSyPW_gonzalo.pdf" target="_blank" data-modal="doc/IFCD0110-JSyPW_gonzalo.pdf" aria-label="See certificate"><span lang="en-GB">Vanilla <abbr lang="en-GB" title="JavaScript">JS</abbr></span> and web publication</a>
+                                <a data-i18n-attr="aria-label" data-i18n="studies.ifcd.jw" class="modal-link" href="doc/IFCD0110-JSyPW_gonzalo.pdf" target="_blank" data-modal="doc/IFCD0110-JSyPW_gonzalo.pdf" aria-label="See certificate"><span lang="en-GB">Vanilla <abbr title="JavaScript">JS</abbr></span> and web publication</a>
                             </li>
                             <li>
                                 <a data-i18n-attr="aria-label" data-i18n="studies.ifcd.add" class="modal-link" href="doc/IFCD0110-FC_gonzalo.pdf" target="_blank" data-modal="doc/IFCD0110-FC_gonzalo.pdf" aria-label="See certificate">Additional training</a>
