--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                                 <abbr lang="en-GB" title="JavaScript Object Notation">JSON</abbr> and <abbr lang="en-GB" title="Asynchronous JavaScript and XML">AJAX</abbr>
                             </li>
                             <li data-i18n="studies.daw.jp">
-                                <span lang="en-GB"></span>Java</span> and <abbr lang="en-GB" title="Hypertext Preprocessor">PHP</abbr> <span>(soon)</span>
+                                <span lang="en-GB">Java</span> and <abbr lang="en-GB" title="Hypertext Preprocessor">PHP</abbr> <span>(soon)</span>
                             </li>
                         </ol>
                     </article>
@@ -525,7 +525,7 @@
         <footer id="cookies-bar" style="display: block;">
             <p data-i18n="cookies.bar">
                 🍪🐱 <strong>sandokan.cat</strong> respect your privacy. <em>We do not track</em>, only measure anonymous visits — (if you agree).
-                <button id="accept-cookies" class="icons-scale" aria-label="Continue browsing" type="button">Continue</button> | <a id="info-cookies" href="https://en.wikipedia.org/wiki/HTTP_cookie" target="_blank" rel="noopener noreferrer" aria-label="More information about cookies">What is a <span lang="en-GB"></span>cookie</span>?</a>
+                <button id="accept-cookies" class="icons-scale" aria-label="Continue browsing" type="button">Continue</button> | <a id="info-cookies" href="https://en.wikipedia.org/wiki/HTTP_cookie" target="_blank" rel="noopener noreferrer" aria-label="More information about cookies">What is a <span lang="en-GB">cookie</span>?</a>
             </p>
         </footer>
         <!--//COOKIES END -->
