--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                         <li>
                             <a aria-label="Catalan" href="fallbacks/light/index.ca.html">
                                 <svg class="icons-scale" role="img" aria-hidden="true" width="40" height="40" preserveAspectRatio="xMinYMin meet">
-                                    <use href="img/sprite.svg#cat-flag"></use>
+                                    <use href="img/sprite.svg#ca-flag"></use>
                                 </svg>
                             </a>
                         </li>
@@ -226,7 +226,7 @@
                     <li>
                         <button data-i18n-attr="aria-label" data-i18n="lang.btn.ca" data-lang="ca" class="icons-scale" id="lang-toggle" aria-label="Catalan" type="button">
                             <svg class="icons-scale" role="img" aria-hidden="true" width="40" height="40" preserveAspectRatio="xMinYMin meet">
-                                <use href="img/sprite.svg#cat-flag"></use>
+                                <use href="img/sprite.svg#ca-flag"></use>
                             </svg>
                         </button>
                     </li>
@@ -238,9 +238,9 @@
                         </button>
                     </li>
                     <li>
-                        <button data-i18n-attr="aria-label" data-i18n="lang.btn.en" class="icons-scale" data-lang="en" aria-label="English" type="button">
+                        <button data-i18n-attr="aria-label" data-i18n="lang.btn.en" data-lang="en" class="icons-scale" aria-label="English" type="button">
                             <svg class="icons-scale" role="img" aria-hidden="true" width="40" height="40" preserveAspectRatio="xMinYMin meet">
-                                <use href="img/sprite.svg#uk-flag"></use>
+                                <use href="img/sprite.svg#gb-flag"></use>
                             </svg>
                         </button>
                     </li>
