--- a/fallbacks/dark/index.es.html
+++ b/fallbacks/dark/index.es.html
@@ -345,10 +345,10 @@
                                 <abbr lang="en-GB" title="Hypertext Markup Language">HTML5</abbr> y <abbr lang="en-GB" title="Cascading Style Sheets">CSS3</abbr>
                             </li>
                             <li>
-                                <a data-i18n-attr="aria-label:studies.ifcd.jw" data-i18n="studies.ifcd.jw" class="modal-link" href="../../doc/IFCD0110-JSyPW_gonzalo.pdf" target="_blank" data-modal="../../doc/IFCD0110-JSyPW_gonzalo.pdf" aria-label="Ver certificado"><span lang="en-GB">Vanilla <abbr title="JavaScript">JS</abbr></span> y publicación web</a>
+                                <a data-i18n-attr="aria-label:studies.ifcd.jw.aria-label" data-i18n="studies.ifcd.jw.html" class="modal-link" href="../../doc/IFCD0110-JSyPW_gonzalo.pdf" target="_blank" data-modal="../../doc/IFCD0110-JSyPW_gonzalo.pdf" aria-label="Ver certificado"><span lang="en-GB">Vanilla <abbr title="JavaScript">JS</abbr></span> y publicación web</a>
                             </li>
                             <li>
-                                <a data-i18n-attr="aria-label:studies.ifcd.add" data-i18n="studies.ifcd.add" class="modal-link" href="../../doc/IFCD0110-FC_gonzalo.pdf" target="_blank" data-modal="../../doc/IFCD0110-FC_gonzalo.pdf" aria-label="Ver certificado">Formación complementaria</a>
+                                <a data-i18n-attr="aria-label:studies.ifcd.add.aria-label" data-i18n="studies.ifcd.add.html" class="modal-link" href="../../doc/IFCD0110-FC_gonzalo.pdf" target="_blank" data-modal="../../doc/IFCD0110-FC_gonzalo.pdf" aria-label="Ver certificado">Formación complementaria</a>
                             </li>
                         </ol>
                     </article>
@@ -401,7 +401,7 @@
                         <h6 lang="es-ES">Universidad Nacional de Educación a Distancia</h6>
                         <ol>
                             <li>
-                                <a data-i18n-attr="aria-label:studies.uned.access" data-i18n="studies.uned.access" class="modal-link" href="../../doc/accesoUNED_gonzalo.pdf" target="_blank" data-modal="../../doc/accesoUNED_gonzalo.pdf" aria-label="Ver certificado">Acceso a la universidad</a>
+                                <a data-i18n-attr="aria-label:studies.uned.access.aria-label" data-i18n="studies.uned.access.html" class="modal-link" href="../../doc/accesoUNED_gonzalo.pdf" target="_blank" data-modal="../../doc/accesoUNED_gonzalo.pdf" aria-label="Ver certificado">Acceso a la universidad</a>
                             </li>
                         </ol>
                     </article>
@@ -409,7 +409,7 @@
                         <h6 lang="ca-ES">IES Joan Coromines</h6>
                         <ol>
                             <li>
-                                <a data-i18n-attr="aria-label:studies.eso.title" data-i18n="studies.eso.title" class="modal-link" href="../../doc/certificatESO_gonzalo.pdf" target="_blank" data-modal="../../doc/certificatESO_gonzalo.pdf" aria-label="See certificate">Certificado en <abbr lang="es-ES" title="Educación Secundaria Obligatoria">ESO</abbr></a>
+                                <a data-i18n-attr="aria-label:studies.eso.title.aria-label" data-i18n="studies.eso.title.html" class="modal-link" href="../../doc/certificatESO_gonzalo.pdf" target="_blank" data-modal="../../doc/certificatESO_gonzalo.pdf" aria-label="See certificate">Certificado en <abbr lang="es-ES" title="Educación Secundaria Obligatoria">ESO</abbr></a>
                             </li>
                         </ol>
                     </article>
