--- a/fallbacks/light/index.ca.html
+++ b/fallbacks/light/index.ca.html
@@ -348,7 +348,7 @@
                                 <a data-i18n-attr="aria-label:studies.ifcd.jw.aria-label" data-i18n="studies.ifcd.jw.html" class="modal-link" href="../../doc/IFCD0110-JSyPW_gonzalo.pdf" target="_blank" data-modal="../../doc/IFCD0110-JSyPW_gonzalo.pdf" aria-label="Veure certificat"><span lang="en-GB">Vanilla <abbr title="JavaScript">JS</abbr></span> i publicació web</a>
                             </li>
                             <li>
-                                <a data-i18n-attr="aria-label:studies.ifcd.add.aria-label" data-i18n="studies.ifcd.add.html" class="modal-link" href="../../doc/IFCD0110-FC_gonzalo.pdf" target="_blank" data-modal="../../doc/IFCD0110-FC_gonzalo.pdf" aria-label="Veure certificat">Formació complementària</a>
+                                <a data-i18n-attr="aria-label:studies.ifcd.add.aria-label" data-i18n="studies.ifcd.add.text" class="modal-link" href="../../doc/IFCD0110-FC_gonzalo.pdf" target="_blank" data-modal="../../doc/IFCD0110-FC_gonzalo.pdf" aria-label="Veure certificat">Formació complementària</a>
                             </li>
                         </ol>
                     </article>
